--- a/app/src/main/res/layout/rv_single_item.xml
+++ b/app/src/main/res/layout/rv_single_item.xml
@@ -29,6 +29,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:textColor="#fff"
+            android:textSize="17sp"
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center_vertical"
+            android:textStyle="bold"
+            android:id="@+id/tv_recycler_year"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
